<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMovieActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <TextView
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title_label" />

    <EditText
        android:id="@+id/edit_text_movie_title"
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_title_hint"
        android:inputType="text" />

    <TextView
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_director_label" />

    <EditText
        android:id="@+id/edit_text_movie_director"
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_director_hint"
        android:inputType="text" />

    <TextView
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre_label" />

    <EditText
        android:id="@+id/edit_text_movie_genre"
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_genre_hint"
        android:inputType="text" />

    <TextView
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_description_label" />

    <EditText
        android:id="@+id/edit_text_movie_description"
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_description_hint"
        android:inputType="text" />

    <TextView
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_url_label" />

    <EditText
        android:id="@+id/edit_text_movie_url"
        style="@style/AddMovieFormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_url_hint"
        android:inputType="textUri" />

</LinearLayout>